NMS 10 resolving pmd and checkstyle issues
resolving pmd and checkstyle issues

--- a/frontlineworker/src/main/resources/webapp/index.html
+++ b/frontlineworker/src/main/resources/webapp/index.html
@@ -1,6 +1,6 @@
-
 <script type="text/javascript">
     innerLayout();
+
 </script>
 
 <div id="inner-center" class="inner-center ui-layout-center ui-layout-pane ui-layout-pane-center">
@@ -12,7 +12,7 @@
     </div>
     <div class="header-footer">
         <ul id="content-tabs" class="nav nav-tabs">
-            <li ng-class="active('#/hello-world')"><a href="#/hello-world" >{{msg('flw')}}</a></li>
+            <li ng-class="active('#/hello-world')"><a href="#/hello-world">{{msg('flw')}}</a></li>
         </ul>
     </div>
     <div class="ui-layout-content">
@@ -25,6 +25,7 @@
 </div>
 
 <div id="inner-east" class="metrics inner-east ui-layout-pane ui-layout-pane-east">
-    <div class="header-toolbar header-footer"><i id="tbarCloseEast" class="button icon-caret-right pull-right"></i></div>
+    <div class="header-toolbar header-footer"><i id="tbarCloseEast" class="button icon-caret-right pull-right"></i>
+    </div>
     <div class="ui-layout-content"></div>
 </div>
