--- a/mobileacademy/src/main/resources/webapp/index.html
+++ b/mobileacademy/src/main/resources/webapp/index.html
@@ -7,12 +7,12 @@
     <div class="header-footer-breadcrumb">
         <ul class="breadcrumb" role="navigation">
             <li><a role="menu" href=".">{{msg('server.home')}}</a></li>
-            <li class="active"><a role="menu" href="#/hello-world">{{msg('academy')}}</a></li>
+            <li class="active"><a role="menu" href="#/hello-world">{{msg('mobileacademy')}}</a></li>
         </ul>
     </div>
     <div class="header-footer">
         <ul id="content-tabs" class="nav nav-tabs">
-            <li ng-class="active('#/hello-world')"><a href="#/hello-world" >{{msg('academy')}}</a></li>
+            <li ng-class="active('#/hello-world')"><a href="#/hello-world" >{{msg('mobileacademy')}}</a></li>
         </ul>
     </div>
     <div class="ui-layout-content">
